# better-minify-js

./: Cargo.toml  README.md  next-version  package.json
.github/workflows/: cli.yaml  nodejs.yaml
cli/: Cargo.toml
cli/src/: main.rs
nodejs/: Cargo.toml  package.json  pnpm-lock.yaml
nodejs/src/: lib.rs
rust/: Cargo.toml
rust/src/: lib.rs
rust/src/emit/: mod.rs
rust/src/minify/: ctx.rs  lexical_lifetimes.rs  pass1.rs  pass3.rs
