[package]
name = "better-minify-js-node"
publish = false
version = "0.7.0"
description = "Node.js bindings for minify-js"
authors = ["Wilson Lin <npm@wilsonl.in>", "Aron Homberg <info@aron-homberg.de>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
better-minify-js = { version = "0.7.0", path = "../rust" }

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-1"]
